@@ -1,3 +1,11 @@
+2001-08-07  Michael Livshin  <mlivshin@bigfoot.com>
+
+	* guile-snarf-docs-texi.in: don't call the tokenizer here, we now
+	do it from the Makefile.
+
+	* Makefile.am: rearrange the snarfing slightly, so that .doc files
+	are of a reasonable size.
+
 2001-08-01  Marius Vollmer  <mvo@zagadka.ping.de>
 
 	* chars.c (scm_char_alphabetic_p, scm_char_numeric_p,
